--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,19 @@ dependencies = [
     "seaborn>=0.13.2",
     "shap>=0.49.1",
 ]
+
+[tool.ruff]
+# Core settings
+line-length = 100
+
+# Linting settings
+[tool.ruff.lint]
+select = ["E", "F", "B"] # pycodestyle, pyflakes, bugbear
+extend-select = ["I"] # Add import rules
+ignore = ["E501"] # Ignore line-too-long warnings
+
+# Formatting settings (Ruff acts like Black by default with these)
+[tool.ruff.format]
+quote-style = "double" # Use double quotes for strings
+indent-style = "space" # Use spaces for indentation
+
