--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "ptpython>=3.0.32",
     "pyarrow>=22.0.0",
     "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "requests>=2.32.5",
     "ruff>=0.14.10",
     "scikit-learn>=1.8.0",
