--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "black>=25.12.0",
     "debugpy>=1.8.19",
+    "dill>=0.4.1",
     "duckdb>=1.4.3",
     "ipython>=9.8.0",
     "ipywidgets>=8.1.8",
@@ -24,6 +25,8 @@ dependencies = [
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
     "shap>=0.49.1",
+    "torch>=2.10.0",
+    "torchvision>=0.25.0",
 ]
 
 [tool.ruff]
